@@ -1,19 +1,11 @@
 package de.MCmoderSD.utilities.sound;
 
-import javax.sound.sampled.AudioFormat;
-import javax.sound.sampled.AudioInputStream;
-import javax.sound.sampled.Clip;
-import javax.sound.sampled.AudioSystem;
-import javax.sound.sampled.LineUnavailableException;
-import javax.sound.sampled.UnsupportedAudioFileException;
+import javax.sound.sampled.*;
 import java.io.BufferedInputStream;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.Objects;
 
 public class WavPlayer {
@@ -31,19 +23,11 @@ public class WavPlayer {
     // Loader
     private void loadClip(String audioPath) {
         try {
-            boolean isWindows = System.getProperty("os.name").toLowerCase().contains("windows");
-
-            // Remove leading slash on Linux
-            if (!isWindows && audioPath.startsWith("/")) audioPath = audioPath.substring(1);
-
             InputStream audioSrc;
-            if (audioPath.startsWith("http")) audioSrc = new URL(audioPath).openStream(); // URL
-            else if (new File(audioPath).isAbsolute())
-                audioSrc = Files.newInputStream(Paths.get(audioPath)); // Absolute path
-            else if (isWindows) audioSrc = getClass().getResourceAsStream(audioPath); // Relative path Windows
-            else audioSrc = getClass().getClassLoader().getResourceAsStream(audioPath); // Relative path Linux
-            if (audioSrc == null) throw new FileNotFoundException("File not found: " + audioPath); // Null check
-
+            if (new File(audioPath).isAbsolute())
+                audioSrc = new File(audioPath).toURI().toURL().openStream(); // Absolute path
+            else if (audioPath.startsWith("http")) audioSrc = new URL(audioPath).openStream(); // Internet path
+            else audioSrc = getClass().getResourceAsStream(audioPath); // Relative path
 
             // Add buffer for mark/reset support
             InputStream bufferedIn = new BufferedInputStream(Objects.requireNonNull(audioSrc));
@@ -73,7 +57,6 @@ public class WavPlayer {
     public void play() {
         if (clip == null) return;
         if (clip.isRunning()) clip.stop(); // Stop the clip before resetting it
-        if (loop) clip.loop(Clip.LOOP_CONTINUOUSLY);
         clip.setFramePosition(0);
         clip.start();
     }
@@ -86,15 +69,13 @@ public class WavPlayer {
 
     // Resume clip
     public void resume() {
-        if (clip == null || clip.getFramePosition() == 0 || clip.getFramePosition() == clip.getFrameLength()) return;
-        if (loop) clip.loop(Clip.LOOP_CONTINUOUSLY);
+        if (clip == null) return;
         clip.start();
     }
 
     // Stop clip
     public void stop() {
         if (clip == null) return;
-        clip.loop(0);
         clip.stop();
         clip.setFramePosition(0);
     }
